First work began Nov 30, 2020.

Clicky Drive v0.0.1.55 - "Seed"
Finished Dec 2, 2020 9:16 PM
---------------------------
- Resizable window containing two images
- images conform to 16:9 aspect ratio
- version string
---------------------------
107 lines of code (Pathetic!)

Clicky Drive v0.1.0.94 - "Standalone"
Finished Dec 3, 2020 2:03 PM
---------------------------
- Gold Node removed.
- Clicky Drive is now a standalone 'engine' It is very limited
	- Background image can be changed at will, though it must be 16:9
	- Version watermark can be appended to, moved, and styled at will.
---------------------------
117 lines of code (Took stuff out, put stuff in, over all, same same)