@@ -3,23 +3,10 @@
 <head>
     <script src="phaser.min.js"></script>
     <script src="Clicky Drive/clickydrive.js"></script>
+	<script src="game.js"></script>
 </head>
 <body>
-	 
-	 <script>
-
-		// Style Watermark
-		ClickyDrive.versionAppend="Running Test v17";
-		ClickyDrive.vWatermarkStyle.strokeThickness=.5;
-		ClickyDrive.vWatermarkStyle.fontSize=20;
-		// Select Background.ui
-		ClickyDrive.background='Example.jpg';
-
-		// set ui
-		ClickyDrive.ui='testui.html';
-		// start the game	
-		ClickyDrive.game = new Phaser.Game(config);
-	 </script>
+	
 </body>
 <style>
 * {
