@@ -1,2 +1,36 @@
+<script src="game.js"></script>
+<img src="Assets/Gold0.png" onclick="game.click()">
 
-<div style="display:block; background-color:green;width: 220px; height: 100px;">HOOGIE A BOODIE YOU BUTTARD</div>
+<style>
+	img
+	{
+		position:absolute;
+		width: 300px; 
+		height: 300px; 
+
+		top:300px; 
+		left:650px;
+		transition:.15s
+	}
+	
+	img:hover
+	{
+		filter: brightness(1.1);
+		width: 320px;
+		height: 320px;
+		top:290px; 
+		left:640px;
+	}
+	
+	img:active
+	{
+		
+		filter: brightness(.9);
+		width: 280px;
+		height: 280px;
+		top:310px; 
+		left:660px;
+	
+	}
+</style>
+
